Profile API update with paramateres
